Character, GameMode, EnhancedInput 프레임워크 추가
+ 기본 Level 추가

--- a/ProjectAlice/Config/DefaultEngine.ini
+++ b/ProjectAlice/Config/DefaultEngine.ini
@@ -12,3 +12,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Level/Main/MainLevel.MainLevel
+GameDefaultMap=/Game/Level/Main/MainLevel.MainLevel
+GlobalDefaultGameMode=/Game/Feature/GameMode/BP_AliceGameModeBase.BP_AliceGameModeBase_C
+
