--- a/ProjectAlice/ProjectAlice.uproject
+++ b/ProjectAlice/ProjectAlice.uproject
@@ -13,7 +13,8 @@
 				"UMG",
 				"AIModule",
 				"NavigationSystem",
-				"GameplayTasks"
+				"GameplayTasks",
+				"EnhancedInput"
 			]
 		}
 	]
